test/regress/kind/nra/valid/paper_example_1.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:51 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Real)
   (v2 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (<= (+  (*  v1 v1) (*  v2 v2)) 2))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (=  v1 v1') (=  v2 v2')))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (and (<= v2 3) (and (<= (- 3) v2) (and (<= (- 3) v1) (<= v1 3))))
)
