test/regress/kind/nra/invalid/dumortier_llibre_artes_ex_5_1_ii.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:49 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Bool)
   (v2 Real)
   (v3 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (and (not (<= v2 (- 1))) (not (<= 0 v2))) (and (not (<= 0 v3)) (<= (- 1) v3))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (or  (and (=  (+  (*  2 v2) (+  (*  v2 v2) (+  (*  v3 v3) (*  (- 2) v2')))) 1) (=  (+  (*  2 v3) (+  (*  5 (*  v2 v3)) (*  (- 2) v3'))) 5)) v1) (not v1)))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (<= (+  v2 v3) 1)
)
